--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vitest": "0.28.5"
   },
   "dependencies": {
+    "@fastify/jwt": "7.2.4",
     "@prisma/client": "4.10.1",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.10",
