--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -19,10 +24,13 @@
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "18.14.1",
+    "@types/supertest": "6.0.1",
     "@vitest/coverage-c8": "0.28.5",
     "@vitest/ui": "0.28.5",
     "eslint": "8.34.0",
-    "prisma": "4.10.1",
+    "npm-run-all": "4.1.5",
+    "prisma": "5.7.1",
+    "supertest": "6.3.3",
     "tsup": "6.6.3",
     "tsx": "3.12.3",
     "typescript": "4.9.5",
@@ -30,8 +38,9 @@
     "vitest": "0.28.5"
   },
   "dependencies": {
+    "@fastify/cookie": "9.2.0",
     "@fastify/jwt": "7.2.4",
-    "@prisma/client": "4.10.1",
+    "@prisma/client": "5.7.1",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.10",
     "dotenv": "16.0.3",
